# SVMGrad

./: .travis.yml  CMakeLists.txt  README.md
cpp/src/: main.cpp
img/: 2d-gamma-circles.eps  2d-gamma.eps
include/: util.h
include/svm_grad/: svm_grad.h
matlab/: 2d_svmgrad_example.m  36d_svmgrad_robotcollision.m  36d_svmlight_learning.m  README.md  Xtraining.m  demo_svmcpsp.m  demo_svmlite.m  plot_performanceEval.m
matlab/SVMUtil/: calculateClassifier.m  calculateClassifierDerivative.m  display3DSVM.m  displaySVM.m  displaySVM.m~  getKernel.m  getModulatedVelocity.m  getNLModulationKernel.m  make.m  mx_calculate_classifier.cpp  mx_calculate_classifier.mexa64  mx_calculate_classifier_derivative.cpp  mx_calculate_classifier_derivative.mexa64  mx_get_bsb_value_bsb_derivative_kernel.cpp  mx_get_bsb_value_bsb_derivative_kernel.mexa64  mx_get_bsb_value_bsb_derivative_kernel_dsigma.cpp  mx_get_bsb_value_bsb_derivative_kernel_dsigma.mexa64  mx_get_osb_value_osb_derivative_kernel.cpp  mx_get_osb_value_osb_derivative_kernel.mexa64  mx_get_osb_value_osb_derivative_kernel_dsigma.cpp  mx_get_osb_value_osb_derivative_kernel_dsigma.mexa64  resampleAndSmoothData.m  selectSVM.m  testModel.m
matlab/classifier/: calculateClass.m  calculateClassifier.m  calculateClassifierDerivative.m  calculateGamma.m  calculateGammaDerivative.m
matlab/kernel/: getKernel.m  getKernelFirstDerivative.m  getKernelSecondDerivative.m
matlab/libsvm/: Makefile  make.m  svm_model_matlab.cpp  svmtrain.mexa64
matlab/models/: 2d-example2-svm.txt  36d-robot-collision-024k.mat  Fender-optimal-model-60deg.mat
matlab/models/2d-examples/: 2d-example2-data.txt
matlab/models/36D-paper-examples/: 36d-robot-collision-006k.mat  36d-robot-collision-012k.mat  36d-robotcollision-data-120k.txt  36d-robotcollision-data-12k.txt  36d-robotcollision-data-18k.txt  36d-robotcollision-data-24k.txt  36d-robotcollision-data-60k.txt  36d-robotcollision-data-6k.txt  36d-robotcollision-svm-12k.txt  36d-robotcollision-svm-18k.txt  36d-robotcollision-svm-24k.txt  36d-robotcollision-svm-60k.txt  36d-robotcollision-svm-6k.txt  36d2-robot-collision-18k.mat
matlab/models/Fender/: 36D-013k-Data-Fender.txt  36D-027k-Data-Fender.txt  36D-040k-Data-Fender.txt  36D-040k-Optimal-Model-Fender.txt  36D-054k-Data-Fender.txt  36D-054k-Optimal-Model-Fender.txt  36D-067k-CPSP-Data-Fender.txt  36D-067k-CPSP-Model-Fender.txt  36D-12k-Optimal-Model-Innovation.txt  36D-130k-CPSP-Data-Fender.txt  36D-130k-CPSP-Model-Fender.txt  36D-135k-Data-Fender.txt  36D-135k-Optimal-Model-Fender.txt  36D-15k-Data-FenderwHands.txt  36D-270k-CPSP-Data-Fender.txt  36D-270k-CPSP-Model-Fender.txt  36D-29k-Data-FenderwHands.txt  36D-540k-CPSP-Data-Fender.txt  36D-540k-CPSP-Model-Fender.txt  36D-Pos-013k-Optimal-Model-Fender.mat  36D-Pos-040k-Optimal-Model-Fender.mat  36D-Pos-054k-Optimal-Model-Fender.mat
matlab/models/Fender-demo/: 36D-13k-Data-Fender.txt  36D-13k-Optimal-Model-Fender.txt  36D-27k-Data-Fender.txt  36D-27k-Optimal-Model-Fender.txt  36D-Pos-27k-Optimal-Model-Fender.mat
matlab/models/FenderwHands/: 36D-15k-Optimal-Model-FenderwHands.txt  36D-29k-Optimal-Model-FenderwHands.txt  36D-Pos-15k-Optimal-Model-FenderwHands.mat  36D-Pos-29k-Optimal-Model-FenderwHands.mat
matlab/models/Granularity-Tests/: Fender-optimal-model-20deg.mat  Fender-optimal-model-22deg.mat  Fender-optimal-model-25deg.mat  Fender-optimal-model-30deg.mat  Fender-optimal-model-45deg.mat
matlab/models/Innovation-Award/: 36D-12k-Optimal-Data-Innovation.txt  36D-12k-Optimal-Model-Innovation.txt
matlab/models/NewIIWA-Setup-Feb18/: 36D-240k-CPSP-Data-NewIIWASetup.txt  36D-240k-CPSP-Model-NewIIWASetup.txt
matlab/performance/: class_performance.m
matlab/plots/: 2d-gamma-zoomed.eps  2d-toy-data-gamma.eps  2d-toy-data-gamma_nocolorbar.eps  2d-toy-data.eps  2d-toy-data_nolegend.eps  exact-models-perf.eps  exact-models-perf.fig  plot_figures_presentation.m  plot_svmgrad_boundary.m  plot_svmgrad_boundary_lines.m
matlab/readwrite/: writeSVMGrad.m  writeSVMGradTestData.m
matlab/runtime-stats/: getfolders.m  plot_runtimeStats.m
matlab/runtime-stats/model-0-1_6kSVs/: Collision_boundary_construction_time.txt  IK_solver_computation_time.txt
matlab/runtime-stats/model-1-2_7kSVs/: Collision_boundary_construction_time.txt  IK_solver_computation_time.txt
matlab/runtime-stats/model-3-3_5kSVs/: Collision_boundary_construction_time.txt  IK_solver_computation_time.txt
matlab/runtime-stats/model-4-8_9SVs/: Collision_boundary_construction_time.txt  IK_solver_computation_time.txt
matlab/runtime-stats/model-5-15kSVs/: Collision_boundary_construction_time.txt  IK_solver_computation_time.txt
matlab/runtime-stats/model1-fender/: Boundary_construction_time.txt
matlab/runtime-stats/model2-fender/: Boundary_construction_time.txt
matlab/runtime-stats/model3-fender/: Boundary_construction_time.txt
matlab/runtime-stats/model4-fender/: Boundary_construction_time.txt
matlab/runtime-stats/model5-fender/: Boundary_construction_time.txt
old_cpp/: CMakeLists.txt
old_cpp/include/: ASVMLearning.h
src/: svm.cpp  svm_grad.cpp  util.cpp
svm-grad/: CMakeLists.txt  package.xml
svm-grad/include/: SVR.h
svm_grad/: CMakeLists.txt  package.xml
svm_grad/include/: SVMGrad.h
svm_grad/include/svm_grad/: SVMGrad.h  svm_grad.h
svm_grad/src/: SVMGrad.cpp  SVR.cpp  test_svmgrad.cpp
svm_grad/src/svm_grad/: SVMGrad.cpp  svm_grad.cpp
tests/: test_svmgrad.cpp
